syntax = "proto3";
package rpc;

message ReducerRequest {
    string outputLocation = 1;
    int32 index = 2;
    int32 count_M = 3; 
}

message ReducerResponse {
    string status = 1;
}

service Reducer {
    rpc reduce (ReducerRequest) returns (ReducerResponse);
}